# candid-python

./: .fernignore  LICENSE  README.md  pyproject.toml  reference.md
.fern/: metadata.json
.github/actions/pagerduty-alert/: action.yml  index.js  package-lock.json  package.json
.github/workflows/: ci.yml
examples/: acme_health.py
src/candid/: __init__.py  candid_api_client.py  client.py  environment.py  version.py
src/candid/core/: client_wrapper.py  oauth_token_provider.py
src/candid/resources/: __init__.py
src/candid/resources/auth/: __init__.py  client.py  raw_client.py
src/candid/resources/billing_notes/: client.py  raw_client.py
src/candid/resources/charge_capture/: client.py  raw_client.py
src/candid/resources/charge_capture_bundles/: client.py  raw_client.py
src/candid/resources/claim_actions_commons/: __init__.py
src/candid/resources/claims/: __init__.py
src/candid/resources/commons/: __init__.py
src/candid/resources/contracts/: __init__.py  client.py  raw_client.py
src/candid/resources/credentialing/: __init__.py  client.py  raw_client.py
src/candid/resources/custom_schemas/: __init__.py  client.py  raw_client.py
src/candid/resources/diagnoses/: __init__.py  client.py  raw_client.py
src/candid/resources/eligibility/: client.py  raw_client.py
src/candid/resources/encounter_attachments/: client.py  raw_client.py
src/candid/resources/encounter_providers/: __init__.py  client.py  raw_client.py
src/candid/resources/encounters/: __init__.py  (+2 more)
tests/utils/: test_http_client.py  test_query_encoding.py  test_serialization.py
(+1559 files in other folders)
